--- a/Yahin_lab1.tex
+++ b/Yahin_lab1.tex
@@ -204,7 +204,7 @@
 	\begin{enumerate}
 		\item Матрица $\textit{рефлексивного}$ замыкания равна $R \cup E_n$, т.е. необходимо все элементы главной диагонали заменить нулями,
 		\item Матрица $\textit{симметричного}$ замыкания равна $R \cup R^T$, т.е. если элемент матрицы равен единице, то симметричный ему элемент относительно главной диагонали тоже должен быть равен единице,
-		\item Стратегия построения матрицы $\textit{транзитивного}$ замыкания такова: если имеется две пары элементов (i, j) и (j, k), то необходимо добавить пару (i, j). После этого запустить цикл еще раз, т.к. после добавления новой пары этому условию могут удовлетворять еще две пары. 
+		\item Стратегия построения матрицы $\textit{транзитивного}$ замыкания такова: если имеется две пары элементов (i, j) и (j, k), то необходимо добавить пару (i, k). После этого запустить цикл еще раз, т.к. после добавления новой пары этому условию могут удовлетворять еще две пары. 
 		
 	\end{enumerate}
 	
