--- a/Yahin_lab1.tex
+++ b/Yahin_lab1.tex
@@ -138,7 +138,7 @@
 		
 	Для того, чтобы реализовать алгоритм классификации бинарных отношений, удобно пользоваться матрицей бинарного отношения.
 	
-	$\textit{Матрицей}$ бинарного отношения $\rho$ между элементами множеств $A = \{a_1, ..., a_m\}$ и $B = \b_1, ..., b_n\}$ называется прямоугольная таблица $M(\rho)$, состоящая из $m$ строк и $n$ столбцов, в которой на пересечении i-ой строки и j-го столбца стоит элемент $[M(\rho)]_{ij}$ из множества {0,1}, определяемый по правилу:
+	$\textit{Матрицей}$ бинарного отношения $\rho$ между элементами множеств $A = \{a_1, ..., a_m\}$ и $B = \{b_1, ..., b_n\}$ называется прямоугольная таблица $M(\rho)$, состоящая из $m$ строк и $n$ столбцов, в которой на пересечении i-ой строки и j-го столбца стоит элемент $[M(\rho)]_{ij}$ из множества {0,1}, определяемый по правилу:
 	
 	\begin{equation*}
 		[M(\rho)]_{ij} =  
@@ -189,24 +189,166 @@
 		\item Для того, чтобы бинарное отношение было $\textit{симметричным}$, матрица представления должна равняться транспонированной матрице,
 		\item Для того, чтобы бинарное отношение было $\textit{антисимметричным}$, в матрице должны отсутствовать единицы, симметричные относительно главной диагонали,
 		\item Для того, чтобы бинарное отношение было $\textit{транзитивным}$, матрица, полученная перемножением матрицы саму на себя, должна являться частью исходной матрицы бинарного отношения.
+
 	\end{enumerate}
+				
+	Распишем алгоритмы проверки этих свойств:
 	
-	После проверки бинарного отношения на эти 5 свойств, мы можем судить,  к какому типу отношений относится данное бинарное отношение. В этом  и заключается алгоритм классификации.
+	\subsubsection{Алгоритм проверки рефлексивности. Функция $bo\_is\_reflexive$}
 	
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Если данное отношение рефлексивно, то res = 1. Иначе res = 0.
+	
+	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N;
+	
+	\underline{Шаг 2.} Если элемент главной диагонали a[i][i] равен единице, то res становится равным 1. Иначе res = 0;
+	
+	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения цикла.
+	
+	Временная сложность алгоритма определения рефлексивности = $O(n)$
+	
+	\subsubsection{Алгоритм проверки антирефлексивности. Функция $bo\_is\_antireflexive$}
+
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Если данное отношение антирефлексивно, то res = 1. Иначе res = 0.
+	
+	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N;
+	
+	\underline{Шаг 2.} Если элемент главной диагонали a[i][i] равен нулю, то res становится равным 1. Иначе res = 0;
+	
+	\underline{Шаг 3.} Если res хоть раз стал равен 1, то возвращается значение res(т.е. 0). Если res всегда был равен 0, то его значение возвратится после завершения цикла.
+	
+	Временная сложность алгоритма определения антирефлексивности = $O(n)$
+		
+	\subsubsection{Алгоритм проверки симметричности. Функция $bo\_is\_symmetric$}
+	
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Если данное отношение симметрично, то res = 1. Иначе res = 0.
+	
+	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N и в нем еще один цикл от с j i+1 до N;
+	
+	\underline{Шаг 2.} Если элемент матрицы a[i][j] равен элементу, стоящему на том же месте в транспонированной матрице a[i][j], то res становится равным 1. Иначе res = 0;
+	
+	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения циклов.
+	
+	Временная сложность алгоритма определения симметричности = $O(n^2/2)$ = $O(n^2)$
+	
+	\subsubsection{Алгоритм проверки антисимметричности. Функция $bo\_is\_antisymmetric$}
+	
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Если данное отношение симметрично, то res = 1. Иначе res = 0.
+	
+	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N и в нем еще один цикл с j от i+1 до N;
+	
+	\underline{Шаг 2.} Если элемент матрицы a[i][j] равен единице и элемент, стоящий на том же месте в транспонированной матрице a[i][j](т.е. элемент, который симметричен элементу a[i][j] относительно главной диагонали), то проверяется равенство i = j(вдруг это элемент главной диагонали) и если элементы равны, то res становится равным 1. Иначе res = 0;
+	
+	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения циклов.
+	
+	Временная сложность алгоритма определения антисимметричности = $O(n^2/2)$ = $O(n^2)$
+	
+	\subsubsection{Алгоритм проверки транзитивности. Функция $bo\_is\_transitive$}
+
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Если данное отношение транзитивно, то res = 1. Иначе res = 0.
+	
+	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N, в нем цикл с j от 0 до N и в нем еще один цикл с k от 0 до N;
+	
+	\underline{Шаг 2.} Если произведение элементов матрицы a[i][k] и a[k][j] меньше либо равно элемента a[i][j](т.е. перемноженная матрица является частью исходной матрицы), то res становится равным 1. Иначе res = 0;
+	
+	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения циклов.
+	
+	После проверки бинарного отношения на эти 5 свойств, мы можем судить, к какому типу отношений относится данное бинарное отношение. В этом  и заключается алгоритм классификации. Эти проверки проводятся в функции $bo\_result$.
+	
+	Временная сложность алгоритма определения транзитивности = $O(n^3)$
+		
 	\begin{enumerate}
 		\item Бинарное отношение является отношением эквивалентности, если выполнились следующие три свойства: рефлексивность, симметричность и транзитивность.
 		\item Если выполнились свойства рефлексивности и транзитивности, то это отношение является отношением квазипорядка,
 		\item Бинарное отношение является отношением порядка, если оно рефлексивно, антисимметрично и транзитивно.
 	\end{enumerate}	
+
+	\subsubsection{Алгоритм проверки отношения на эквивалентность, квазипорядок и порядок}
+	
+
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$ <<Данное отношение является отношением эквивалентности>> или <<Данное отношение является отношением квазипорядка>> или <<Данное отношение является отношением порядка>>.
+	
+	\underline{Шаг 1.} С помощью написанных выше алгоритмов проверяются свойства заданного отношения. Результаты вносятся в переменные $res\_refl$, $res\_antirefl$, $res\_simm$, $res\_antisimm$, $res\_tranz$ (соответственно: рефлексивность, антирефлексивность, симметричность, антисимметричность и транзитивность).
+	
+	\underline{Шаг 2.} Если выполняются свойства рефлексивности и транзитивности, т.е. $res\_refl$ = 1 и $res\_tranz$ = 1, то выводится <<Данное отношение является отношением квазипорядка>> и проверяется свойство симметричности. Если оно выполняется, т.е. $res\_simm$ = 1, то выводится <<Данное отношение является отношением эквивалентности>>.
+	
+	\underline{Шаг 3.} Если выполняются свойства рефлексивности, антисимметричности и транзитивности, т.е. $res\_refl$ = 1, $res\_antisimm$ = 1 и $res\_tranz$ = 1, то выводится <<Данное отношение является отношением порядка>>.
+	
+	
+	Временная сложность алгоритма определения отношения эквивалентности = $O(n^3 + n^2/2 + n)$ = $O(n^3)$
+	
+	Временная сложность алгоритма определения отношения квазипорядка = $O(n^3 + n^2/2 + n)$ = $O(n^3)$
+	
+	Временная сложность алгоритма определения отношения порядка = $O(n^3 + n)$ = $O(n^3)$
+	
 	
 	\subsection{Описание алгоритма построения основных замыканий бинарных отношений}
 	
 	\begin{enumerate}
-		\item Матрица $\textit{рефлексивного}$ замыкания равна $R \cup E_n$, т.е. необходимо все элементы главной диагонали заменить нулями,
+		\item Матрица $\textit{рефлексивного}$ замыкания равна $R \cup E_n$, т.е. необходимо все элементы главной диагонали заменить единицами,
 		\item Матрица $\textit{симметричного}$ замыкания равна $R \cup R^T$, т.е. если элемент матрицы равен единице, то симметричный ему элемент относительно главной диагонали тоже должен быть равен единице,
-		\item Стратегия построения матрицы $\textit{транзитивного}$ замыкания такова: если имеется две пары элементов (i, j) и (j, k), то необходимо добавить пару (i, k). После этого запустить цикл еще раз, т.к. после добавления новой пары этому условию могут удовлетворять еще две пары. 
-		
+		\item Стратегия построения матрицы $\textit{транзитивного}$ замыкания такова: если в отношении имеется две пары элементов (j, k) и (k, d), то необходимо добавить пару (j, d). После этого надо запустить цикл еще раз, т.к. после добавления новой пары этому условию могут удовлетворять еще две пары. 
 	\end{enumerate}
+
+	\subsubsection{Алгоритм построения замыкания относительно свойства рефлексивности}
+	
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства рефлексивности размерности $N \times N$.
+	
+	\underline{Шаг 1.} Запускается цикл $for$ i от 0 до N и в нем каждому элементу главной диагонали a[i][i] присваивается единица.
+	
+	Временная сложность алгоритма определения построения замыкания рефлексивности = $O(n)$
+	
+	
+	\subsubsection{Алгоритм построения замыкания относительно свойства симметричности}
+
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства симметричности размерности $N \times N$.
+	
+	\underline{Шаг 1.} Запускается цикл $for$ i от 0 до N, в нем запускается еще один цикл с j от 0 до N и в нем все элементы a[i][j] проверяются на равность единице. Если элемент равен единице, то симметричный ему элемент a[j][i] тоже становится равен единице.
+	
+	Временная сложность алгоритма определения построения замыкания симметричности = $O(n^2)$
+	
+	\subsubsection{Алгоритм построения замыкания относительно свойства транзитивности}
+
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства транзитивности размерности $N \times N$.
+	
+	\underline{Шаг 1.} В данном алгоритме необходимо запустить цикл $for$ 4 раза, т.к. после добавления новой пары в заданное отношение(в ходе построения замыкания), другие пары могут образовать условие для добавления еще одной пары. Перед последним циклом проверяется равность элемента a[j][k] единице. Если равность выполняется, то запускается цикл $for$ с d от 0 до N.
+	
+	\underline{Шаг 2.} В этом цикле идет проверка на равность единице элемента a[k][d]. Если условие выполняется, то по свойству транзитивности в отношение надо добавить пару (j, d), т.е. в матрице размерности элементу a[j][d] присвоить единицу.
+	
+	Временная сложность алгоритма определения построения замыкания транзитивности = $O(n^4)$
+	
+	\subsubsection{Алгоритм построения замыкания относительно эквивалентности}
+
+	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
+	
+	$\textit{Выход:}$  Матрица построенного замыкания относительно эквивалентности размерности $N \times N$.
+	
+	\underline{Шаг 1.} Построение замыкания относительно свойства рефлексивности.
+	
+	\underline{Шаг 2.} Построение замыкания относительно свойства симметричности.
+		
+	\underline{Шаг 3.} Построение замыкания относительно свойства транзитивности.
+	
+	Временная сложность алгоритма определения построения замыкания эквивалентности = $O(n^4 + n^2 + n)$ = $O(n^4)$
+		
+	
 	
 	\subsection{Код программы}	
 
@@ -424,14 +566,12 @@
 			cout << "Антисимметричность:" << res_antisimm << endl;
 			cout << "Транзитивность:" << res_tranz << endl;
 			
-			if (res_refl == 1 && res_antirefl == 0 && 
-			res_antisimm == 0 && res_tranz == 1) {
+			if (res_refl == 1 && res_tranz == 1) {
 				cout << "Данное отношение является отношением квазипорядка" << endl;
 				if (res_simm == 1)
 				cout << "Данное отношение является отношением эквивалентности" << endl;
 			}
-			if (res_refl == 1 && res_antirefl == 0 && res_simm == 0 && 
-			res_antisimm == 1 && res_tranz == 1) {
+			if (res_refl == 1 && res_antisimm == 1 && res_tranz == 1) {
 				cout << "Данное отношение является отношением порядка" << endl;
 			}
 			
@@ -557,54 +697,6 @@
 		\caption{Тестировние №3}
 		\label{fig:test3}
 	\end{figure}
-
-	\subsection{Оценки сложности рассмотренных алгоритмов }
-	
-	\begin{enumerate}
-		\item Определение рефлексивности
-		
-		Временная сложность алгоритма определения рефлексивности = $O(n)$
-		\item Определение антирефлексивности
-
-		Временная сложность алгоритма определения антирефлексивности = $O(n)$
-		\item Определение симметричности
-
-		Временная сложность алгоритма определения симметричности = $O(n^2/2)$ = $O(n^2)$
-		\item Определение антисимметричности
-
-		Временная сложность алгоритма определения антисимметричности = $O(n^2/2)$ = $O(n^2)$
-		\item Определение транзитивности
-
-		Временная сложность алгоритма определения транзитивности = $O(n^3)$
-		
-		\item Определение отношения эквивалентности
-		
-		Временная сложность алгоритма определения отношения эквивалентности = $O(n^3 + n^2/2 + n)$ = $O(n^3)$
-		
-		\item Определение отношения квазипорядка
-
-		Временная сложность алгоритма определения отношения эквивалентности = $O(n^3 + n^2/2 + n)$ = $O(n^3)$
-		
-		\item Определение отношения порядка
-		
-		Временная сложность алгоритма определения отношения эквивалентности = $O(n^3 + n)$ = $O(n^3)$
-		
-		\item Определение построения замыкания рефлексивности
-		
-		Временная сложность алгоритма определения построения замыкания рефлексивности = $O(n)$
-		
-		\item Определение построения замыкания симметричности
-		
-		Временная сложность алгоритма определения построения замыкания симметричности = $O(n^2)$
-		
-		\item Определение построения замыкания транзитивности
-
-		Временная сложность алгоритма определения построения замыкания транзитивности = $O(n^4)$
-
-		\item Определение построения замыкания эквивалентности
-
-		Временная сложность алгоритма определения построения замыкания эквивалентности = $O(n^4 + n^2 + n)$ = $O(n^4)$
-	\end{enumerate}
 	
 	\newpage
 	\conclusion %заключение
