--- a/Yahin_lab1.tex
+++ b/Yahin_lab1.tex
@@ -41,7 +41,7 @@
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 \usepackage{tempora}
-
+\usepackage{kantlipsum}
 \usepackage[sort,compress]{cite}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -70,8 +70,6 @@
 
 \renewcommand\theFancyVerbLine{\small\arabic{FancyVerbLine}}
 
-\newtheorem{lem}{Лемма}
-
 \begin{document}
 
 	\includepdf{yahin-titulnik.pdf}
@@ -89,8 +87,6 @@
 	Подмножества декартова произведения $A \times B$ множеств $A$ и $B$ называются бинарными отношениями между элементами множеств $A, B$ и обозначаются строчными греческими буквами: 
 	$\rho,\sigma, ..., \rho_1, \rho_2, ...   $.
 	
-	бинарными
-	
 	Для бинарного отношения $\rho \subset A \times B$ область определения $D_\rho$ и множество значений $E_\rho$ определяются как подмножества соответствующих множеств $А$ и $В$ по следующим формулам:
 	
 	 $D_\rho = \{a: (a,b) \in \rho $ для некоторого $ b \in B \}$,
@@ -104,10 +100,10 @@
 	Бинарное отношение $\rho \subset A \cdot A$ называется:
 
 	\begin{enumerate}
-		\item \textit{рефлексивным}, если $(a, a) \in \rho$ для любого $a \in A$;
-		\item \textit{симметричным}, если $(a, b) \in \rho \Rightarrow (b, a) \in \rho$;
-		\item \textit{антисимметричным}, если $(a, b) \in \rho \text{ и } (b, a) \in \rho \Rightarrow a = b$;
-		\item \textit{транзитивным}, если $(a, b) \in \rho \text{ и } (b, c) \in \rho \Rightarrow (a, c) \in \rho$
+		\item \textit{рефлексивным}, если $(a, a) \in \rho$, для любого $a \in A$;
+		\item \textit{симметричным}, если $(a, b) \in \rho \Rightarrow (b, a) \in \rho$, для любого $a, b \in A$;
+		\item \textit{антисимметричным}, если $(a, b) \in \rho \text{ и } (b, a) \in \rho \Rightarrow a = b$, для любых $a, b \in A$;
+		\item \textit{транзитивным}, если $(a, b) \in \rho \text{ и } (b, c) \in \rho \Rightarrow (a, c) \in \rho$, для любых $a, b, c \in A$;
 	\end{enumerate}
 	
 	Основываясь на этом, можно выделить три типа отношений:
@@ -115,25 +111,13 @@
 	\begin{enumerate}
 		\item Отношение эквивалентности
 		
-		Бинарное отношение $\varepsilon $ на множестве $A$ называется 
-		
-		$\textit{отношением эквивалентности}$ (или просто $\textit{эквивалентностью}$),
-		
-		если оно рефлексивно, симметрично и транзитивно,
+		Бинарное отношение $\varepsilon $ на множестве $A$ называется отношением эквивалентности (или просто $\textit{эквивалентностью}$), если оно рефлексивно, симметрично и транзитивно,
 		\item Отношение квазипорядка
 		
-		Бинарное отношение $\omega $ на множестве $A$ называется 
-		
-		$\textit{отношением квазипорядка}$ (или просто $\textit{квазипорядком}$),
-		
-		 если оно рефлексивно и транзитивно,
+		Бинарное отношение $\omega $ на множестве $A$ называется отношением квазипорядка (или просто $\textit{квазипорядком}$), если оно рефлексивно и транзитивно,
 		\item Отношение порядка
 		
-		Бинарное отношение $\omega $ на множестве $A$ называется 
-		
-		$\textit{отношением порядка}$ (или просто $\textit{порядком}$),
-		
-		 если оно рефлексивно, антисимметрично и транзитивно,
+		Бинарное отношение $\omega $ на множестве $A$ называется отношением порядка (или просто $\textit{порядком}$), если оно рефлексивно, антисимметрично и транзитивно,
 	\end{enumerate}
 		
 	Для того, чтобы реализовать алгоритм классификации бинарных отношений, удобно пользоваться матрицей бинарного отношения.
@@ -194,73 +178,83 @@
 				
 	Распишем алгоритмы проверки этих свойств:
 	
-	\subsubsection{Алгоритм проверки рефлексивности. Функция $bo\_is\_reflexive$}
+	\subsubsection{Алгоритм проверки рефлексивности}
 	
 	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
 	
-	$\textit{Выход:}$  Если данное отношение рефлексивно, то res = 1. Иначе res = 0.
+	$\textit{Выход:}$  "Бинарное отношение является рефлексивным" или "Бинарное отношение не является рефлексивным".
 	
-	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N;
+	\underline{Шаг 1.} res := 0;
 	
-	\underline{Шаг 2.} Если элемент главной диагонали a[i][i] равен единице, то res становится равным 1. Иначе res = 0;
+	\underline{Шаг 2.} Цикл $for$ i от 1 до N;
 	
-	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения цикла.
+	\underline{Шаг 3.} Если a[i][i] = 1, то res := 1. Иначе res := 0;
+	
+	\underline{Шаг 4.} Если res = 0, то вернуть ответ "отношение не рефлексивно". Если res = 1, то вернуть ответ "отношение рефлексивно".
 	
 	Временная сложность алгоритма определения рефлексивности = $O(n)$
 	
-	\subsubsection{Алгоритм проверки антирефлексивности. Функция $bo\_is\_antireflexive$}
+	\subsubsection{Алгоритм проверки антирефлексивности}
 
 	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
 	
-	$\textit{Выход:}$  Если данное отношение антирефлексивно, то res = 1. Иначе res = 0.
+	$\textit{Выход:}$  "Бинарное отношение является антирефлексивным" или "Бинарное отношение не является антирефлексивным".
 	
-	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N;
+	\underline{Шаг 1.} res := 0;
+
+	\underline{Шаг 2.} Цикл $for$ i от 1 до N;
 	
-	\underline{Шаг 2.} Если элемент главной диагонали a[i][i] равен нулю, то res становится равным 1. Иначе res = 0;
+	\underline{Шаг 3.} Если a[i][i] = 0, то res := 1. Иначе res := 0;
 	
-	\underline{Шаг 3.} Если res хоть раз стал равен 1, то возвращается значение res(т.е. 0). Если res всегда был равен 0, то его значение возвратится после завершения цикла.
+	\underline{Шаг 4.} Если res = 0, то вернуть ответ "отношение не антирефлексивно". Если res = 1, то вернуть ответ "отношение антирефлексивно".
 	
 	Временная сложность алгоритма определения антирефлексивности = $O(n)$
 		
-	\subsubsection{Алгоритм проверки симметричности. Функция $bo\_is\_symmetric$}
+	\subsubsection{Алгоритм проверки симметричности}
 	
 	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
 	
-	$\textit{Выход:}$  Если данное отношение симметрично, то res = 1. Иначе res = 0.
+	$\textit{Выход:}$ "Бинарное отношение является симметричным" или "Бинарное отношение не является симметричным".
 	
-	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N и в нем еще один цикл от с j i+1 до N;
+	\underline{Шаг 1.} res := 0;
 	
-	\underline{Шаг 2.} Если элемент матрицы a[i][j] равен элементу, стоящему на том же месте в транспонированной матрице a[i][j], то res становится равным 1. Иначе res = 0;
+	\underline{Шаг 2.} Цикл $for$ i от 1 до N и в нем еще один цикл от с j от i+1 до N;
 	
-	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения циклов.
+	\underline{Шаг 3.} Если a[i][j] = a[i][j], то res := 1. Иначе res := 0;
+	
+	\underline{Шаг 4.} Если res = 1, то вернуть ответ "отношение симметрично". Если res = 0, то вернуть ответ "отношение не симметрично".
 	
 	Временная сложность алгоритма определения симметричности = $O(n^2/2)$ = $O(n^2)$
 	
-	\subsubsection{Алгоритм проверки антисимметричности. Функция $bo\_is\_antisymmetric$}
+	\subsubsection{Алгоритм проверки антисимметричности}
 	
 	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
 	
-	$\textit{Выход:}$  Если данное отношение симметрично, то res = 1. Иначе res = 0.
+	$\textit{Выход:}$  "Бинарное отношение является антисимметричным" или "Бинарное отношение не является антисимметричным".
 	
-	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N и в нем еще один цикл с j от i+1 до N;
+	\underline{Шаг 1.} res := 0;
+
+	\underline{Шаг 2.} Цикл $for$ i от 1 до N и в нем еще один цикл от с j от i+1 до N;
 	
-	\underline{Шаг 2.} Если элемент матрицы a[i][j] равен единице и элемент, стоящий на том же месте в транспонированной матрице a[j][i](т.е. элемент, который симметричен элементу a[i][j] относительно главной диагонали), то проверяется равенство i = j(вдруг это элемент главной диагонали) и если элементы равны, то res становится равным 1. Иначе res = 0. Если элементы не равны единице, то res = 1;
+	\underline{Шаг 3.} Если  a[i][j] = a[j][i] = 1, то проверяется равенство i = j и если элементы равны, то res := 1. Иначе res = 0. Если элементы не равны единице, то res := 1;
 	
-	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения циклов.
+	\underline{Шаг 4.} Если res = 1, то вернуть ответ "отношение антисимметрично". Если res = 0, то вернуть ответ "отношение не антисимметрично".
 	
 	Временная сложность алгоритма определения антисимметричности = $O(n^2/2)$ = $O(n^2)$
 	
-	\subsubsection{Алгоритм проверки транзитивности. Функция $bo\_is\_transitive$}
+	\subsubsection{Алгоритм проверки транзитивности}
 
 	$\textit{Вход:}$ Размерность матрицы N и матрица представления бинарного отношения размерности $N \times N$
 	
-	$\textit{Выход:}$  Если данное отношение транзитивно, то res = 1. Иначе res = 0.
+	$\textit{Выход:}$  "Бинарное отношение является транзитивным" или "Бинарное отношение не является транзитивным".
 	
-	\underline{Шаг 1.} Создается элемент res, равный 0. Запускается цикл $for$ i от 0 до N, в нем цикл с j от 0 до N и в нем еще один цикл с k от 0 до N;
+	\underline{Шаг 1.} res := 0;
 	
-	\underline{Шаг 2.} Если произведение элементов матрицы a[i][k] и a[k][j] меньше либо равно элемента a[i][j](т.е. перемноженная матрица является частью исходной матрицы), то res становится равным 1. Иначе res = 0;
+	\underline{Шаг 2.} Цикл $for$ i от 1 до N и в нем еще один цикл от с j от 0 до N и в нем еще один цикл с k от 0 до N;
 	
-	\underline{Шаг 3.} Если res хоть раз стал равен 0, то возвращается значение res(т.е. 0). Если res всегда был равен 1, то его значение выведется после завершения циклов.
+	\underline{Шаг 3.} Если  a[i][k] * a[k][j] <= a[i][j], то res := 1. Иначе res := 0;
+	
+	\underline{Шаг 4.} Если res = 1, то вернуть ответ "отношение транзитивно". Если res = 0, то вернуть ответ "отношение не транзитивно".
 	
 	После проверки бинарного отношения на эти 5 свойств, мы можем судить, к какому типу отношений относится данное бинарное отношение. В этом  и заключается алгоритм классификации. Эти проверки проводятся в функции $bo\_result$.
 	
@@ -281,9 +275,9 @@
 	
 	\underline{Шаг 1.} С помощью написанных выше алгоритмов проверяются свойства заданного отношения. Результаты вносятся в переменные $res\_refl$, $res\_antirefl$, $res\_simm$, $res\_antisimm$, $res\_tranz$ (соответственно: рефлексивность, антирефлексивность, симметричность, антисимметричность и транзитивность).
 	
-	\underline{Шаг 2.} Если выполняются свойства рефлексивности и транзитивности, т.е. $res\_refl$ = 1 и $res\_tranz$ = 1, то выводится <<Данное отношение является отношением квазипорядка>> и проверяется свойство симметричности. Если оно выполняется, т.е. $res\_simm$ = 1, то выводится <<Данное отношение является отношением эквивалентности>>.
+	\underline{Шаг 2.} Если  $res\_refl$ = 1 и $res\_tranz$ = 1, то выводится <<Данное отношение является отношением квазипорядка>> и проверяется свойство симметричности. Если $res\_simm$ = 1, то выводится <<Данное отношение является отношением эквивалентности>>.
 	
-	\underline{Шаг 3.} Если выполняются свойства рефлексивности, антисимметричности и транзитивности, т.е. $res\_refl$ = 1, $res\_antisimm$ = 1 и $res\_tranz$ = 1, то выводится <<Данное отношение является отношением порядка>>.
+	\underline{Шаг 3.} Если $res\_refl$ = 1, $res\_antisimm$ = 1 и $res\_tranz$ = 1, то выводится <<Данное отношение является отношением порядка>>.
 	
 	
 	Временная сложность алгоритма определения отношения эквивалентности = $O(n^3 + n^2/2 + n)$ = $O(n^3)$
@@ -307,7 +301,9 @@
 	
 	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства рефлексивности размерности $N \times N$.
 	
-	\underline{Шаг 1.} Запускается цикл $for$ i от 0 до N и в нем каждому элементу главной диагонали a[i][i] присваивается единица.
+	\underline{Шаг 1.} Цикл $for$ i от 1 до N;
+	
+	\underline{Шаг 2.} a[i][i] := 1.
 	
 	Временная сложность алгоритма определения построения замыкания рефлексивности = $O(n)$
 	
@@ -318,7 +314,9 @@
 	
 	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства симметричности размерности $N \times N$.
 	
-	\underline{Шаг 1.} Запускается цикл $for$ i от 0 до N, в нем запускается еще один цикл с j от 0 до N и в нем все элементы a[i][j] проверяются на равность единице. Если элемент равен единице, то симметричный ему элемент a[j][i] тоже становится равен единице.
+	\underline{Шаг 1.} Цикл $for$ i от 1 до N и в нем запускается еще один цикл с j от 1 до N;
+		
+	\underline{Шаг 2.} Если a[i][j] = 1, то a[j][i] := 1.
 	
 	Временная сложность алгоритма определения построения замыкания симметричности = $O(n^2)$
 	
@@ -328,9 +326,10 @@
 	
 	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства транзитивности размерности $N \times N$.
 	
-	\underline{Шаг 1.} В данном алгоритме необходимо запустить цикл $for$ 4 раза, т.к. после добавления новой пары в заданное отношение(в ходе построения замыкания), другие пары могут образовать условие для добавления еще одной пары. Перед последним циклом проверяется равность элемента a[j][k] единице. Если равность выполняется, то запускается цикл $for$ с d от 0 до N.
+	\underline{Шаг 1.} В данном алгоритме необходимо запустить цикл $for$ 4 раза;
+	\underline{Шаг 2.} Если перед последним циклом a[j][k] = 1, то запускается цикл $for$ с d от 0 до N.
 	
-	\underline{Шаг 2.} В этом цикле идет проверка на равность единице элемента a[k][d]. Если условие выполняется, то по свойству транзитивности в отношение надо добавить пару (j, d), т.е. в матрице размерности элементу a[j][d] присвоить единицу.
+	\underline{Шаг 3.} Если a[k][d] = 1, то по свойству транзитивности в отношение надо добавить пару (j, d), т.е. a[j][d] := 1.
 	
 	Временная сложность алгоритма определения построения замыкания транзитивности = $O(n^4)$
 	
@@ -350,8 +349,7 @@
 		
 	
 	
-	\subsection{Код программы}	
-
+	\subsection{Код программы}		
 	
 	 \begin{verbatim}
 #include <iostream>
