Исправлены замечания. Попытка number \infty

--- a/Yahin_lab1.tex
+++ b/Yahin_lab1.tex
@@ -153,6 +153,32 @@
 
 	Множество $Z_{as}$ всех антисимметричных бинарных отношений между элементами множетсва $A$ не является системой замыкания.
 	
+	\subsection{Определение замыкания и оператора замыкания}
+
+	$\textit{Оператором замыкания}$ на множестве $А$ называется отображение $f$ множества всех подмножеств $P(A)$ в себя, удовлетворяющее условиям:
+
+	\begin{enumerate}
+		\item $X \subset Y \Rightarrow f(X) \subset f(Y)$;
+		\item $X \subset f(X)$;
+		\item $ff(X) = f(X)$,
+	\end{enumerate}
+
+	для всех $X,Y \in P(A)$.
+	
+	Для подмножества $X \subset A$ значение $f(X)$ называется $\textit{замыканием}$ подмножества $X$.
+
+	\subsection{Лемма о замыканиях бинарных отношений}
+	
+	На множестве $P(A^2)$ всех бинарных отношений между элементами множества $A$ следующие отображения являются операторами замыканий:
+
+	\begin{enumerate}
+		\item $f_r(\rho) = \varrho \cup \Delta_A$ - наименьшее рефлексивное бинарное отношение, содержащее отношение $\rho \subset A^2$,
+		\item $f_s(\rho) = \varrho \cup \varrho^{-1}$ - наименьшее симметричное бинарное отношение, содержащее отношение $\rho \subset A^2$,
+		\item $f_t(\rho) = \cup_{n=1}^{\infty}\rho^n $ - наименьшее транзитивное бинарное отношение, содержащее отношение $\rho \subset A^2$,
+		\item $f_{eq}(\rho) = f_{t}f_{s} f_{r}(\rho)$ - наименьшее отношение эквивалентности, содержащее отношение $\rho \subset A^2$.
+	\end{enumerate}
+	
+	
 	\section{Результаты работы}
 	\subsection{Описание алгоритма классификации бинарных отношений}
 	
@@ -220,7 +246,7 @@
 	
 	\underline{Шаг 2.} Цикл $for$ i от 1 до N и в нем еще один цикл от с j от i+1 до N;
 	
-	\underline{Шаг 3.} Если a[i][j] = a[i][j], то res := 1. Иначе res := 0;
+	\underline{Шаг 3.} Если a[i][j] = a[j][i], то res := 1. Иначе res := 0;
 	
 	\underline{Шаг 4.} Если res = 1, то вернуть ответ "отношение симметрично". Если res = 0, то вернуть ответ "отношение не симметрично".
 	
@@ -250,7 +276,7 @@
 	
 	\underline{Шаг 1.} res := 0;
 	
-	\underline{Шаг 2.} Цикл $for$ i от 1 до N и в нем еще один цикл от с j от 0 до N и в нем еще один цикл с k от 0 до N;
+	\underline{Шаг 2.} Цикл $for$ i от 1 до N и в нем еще один цикл от с j от 1 до N и в нем еще один цикл с k от 1 до N;
 	
 	\underline{Шаг 3.} Если  a[i][k] * a[k][j] <= a[i][j], то res := 1. Иначе res := 0;
 	
@@ -326,8 +352,9 @@
 	
 	$\textit{Выход:}$  Матрица построенного замыкания относительно свойства транзитивности размерности $N \times N$.
 	
-	\underline{Шаг 1.} В данном алгоритме необходимо запустить цикл $for$ 4 раза;
-	\underline{Шаг 2.} Если перед последним циклом a[j][k] = 1, то запускается цикл $for$ с d от 0 до N.
+	\underline{Шаг 1.} В данном алгоритме необходимо запустить цикл $for$ 4 раза. Сначала следующие 3 цикла: $for$ с i от 1 до N, в нем $for$ с j от 1 до N и в нем $for$ с k от 1 до N.
+	
+	\underline{Шаг 2.} Если в этом цикле a[j][k] = 1, то запускается цикл $for$ с d от 1 до N.
 	
 	\underline{Шаг 3.} Если a[k][d] = 1, то по свойству транзитивности в отношение надо добавить пару (j, d), т.е. a[j][d] := 1.
 	
