--- a/Yahin_lab1.tex
+++ b/Yahin_lab1.tex
@@ -172,8 +172,8 @@
 	На множестве $P(A^2)$ всех бинарных отношений между элементами множества $A$ следующие отображения являются операторами замыканий:
 
 	\begin{enumerate}
-		\item $f_r(\rho) = \varrho \cup \Delta_A$ - наименьшее рефлексивное бинарное отношение, содержащее отношение $\rho \subset A^2$,
-		\item $f_s(\rho) = \varrho \cup \varrho^{-1}$ - наименьшее симметричное бинарное отношение, содержащее отношение $\rho \subset A^2$,
+		\item $f_r(\rho) = \rho \cup \Delta_A$ - наименьшее рефлексивное бинарное отношение, содержащее отношение $\rho \subset A^2$,
+		\item $f_s(\rho) = \rho \cup \rho^{-1}$ - наименьшее симметричное бинарное отношение, содержащее отношение $\rho \subset A^2$,
 		\item $f_t(\rho) = \cup_{n=1}^{\infty}\rho^n $ - наименьшее транзитивное бинарное отношение, содержащее отношение $\rho \subset A^2$,
 		\item $f_{eq}(\rho) = f_{t}f_{s} f_{r}(\rho)$ - наименьшее отношение эквивалентности, содержащее отношение $\rho \subset A^2$.
 	\end{enumerate}
